--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo $BUILD_OUTPUT_BUCKET
-      - cp bin/* .
+      - cp -R bin/* .
+      - ls
       - aws cloudformation package --template-file aws-foundation/SAM/cfn-sam.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file NewSamTemplate.yaml
   post_build:
     commands:
