--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - echo $BUILD_OUTPUT_BUCKET
       - cp -R bin/* .
       - ls
-      - aws cloudformation package --template-file aws-foundation/SAM/cfn-sam.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file NewSamTemplate.yaml
+      - aws cloudformation package --template-file bin/cfn-sam.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file NewSamTemplate.yaml
   post_build:
     commands:
       - echo Build completed on `date`
