--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,8 @@
 version: 0.2
 
-# env:
-#   variables:
+env:
+  variables:
+    githubOwner: $GITHUBOWNER
 
 phases:
   install:
@@ -17,6 +18,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo $BUILD_OUTPUT_BUCKET
+      - echo $GITHUBOWNER
+      - sh aws-foundation/foundation/fetch-parameters.sh
       - cp -R bin/* .
       - ls
       - aws cloudformation package --template-file bin/cfn-sam.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file NewSamTemplate.yaml
@@ -27,4 +30,5 @@ artifacts:
   type: zip
   files:
     - NewSamTemplate.yaml
+    - parameters.json
   discard-paths: yes
