--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,7 @@ phases:
       - echo $BUILD_OUTPUT_BUCKET
       - echo $GITHUBOWNER
       - sh aws-foundation/foundation/fetch-parameters.sh
+      - cat parameters.json
       - cp -R bin/* .
       - ls
       - aws cloudformation package --template-file bin/cfn-sam.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file NewSamTemplate.yaml
